--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,7 @@
 name=carloop
-version=1.1.0
+version=1.1.1
 license=MIT
 author=Julien Vanier <julien@carloop.io>
 sentence=Carloop.io library for the Particle platform
+url=https://github.com/carloop/carloop-library
+repository=https://github.com/carloop/carloop-library.git
